--- a/app/src/main/res/layout/activity_desafio1.xml
+++ b/app/src/main/res/layout/activity_desafio1.xml
@@ -35,7 +35,7 @@
         android:layout_marginEnd="20dp"
         android:orientation="vertical"
 
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/guidelineRigth"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
