--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -33,5 +33,12 @@
         android:backgroundTint="@color/black"
         android:text="@string/txtDesafio2" />
 
+    <Button
+        android:id="@+id/btnDesafio3"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:backgroundTint="@color/black"
+        android:text="@string/txtDesafio3" />
+
 
 </LinearLayout>
